kubernasty/crust/ingress/authentik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`authentik.micahrl.me`)
      kind: Rule
      services:
        - name: authentik-server
          namespace: authentik
          kind: Service
          port: 80
      middlewares:
        - name: redirect-to-https
          namespace: traefik
  tls:
    secretName: kubernasty-wildcard-backing-secret
