kubernasty/crust/ingress/clusterlogs.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: clusterlogs
  namespace: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`clusterlogs.micahrl.me`)
      kind: Rule
      services:
        - name: ldap-account-manager
          namespace: directory
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
        - name: redirect-to-https
          namespace: traefik
  tls:
    secretName: kubernasty-wildcard-backing-secret
