kubernasty/crust/ingress/datadump-postgres.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: datadump-postgres
  namespace: ingress
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`*`)
      services:
        - name: datadumppg-bouncer
          namespace: datadump
          port: 543211
