kubernasty/crust/ingress/directory-ldaps.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: directory-ldaps
  namespace: ingress
spec:
  entryPoints:
    - ldaps
  routes:
    - match: HostSNI(`*`)
      services:
        - name: dirsrv
          namespace: directory
          port: 636
