kubernasty/crust/ingress/gitea-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-http
  namespace: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitea.micahrl.me`)
      kind: Rule
      services:
        - name: gitea
          namespace: gitea
          kind: Service
          port: 80
      middlewares:
        - name: redirect-to-https
          namespace: traefik
  tls:
    secretName: kubernasty-wildcard-backing-secret
