kubernasty/crust/ingress/grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.micahrl.me`)
      kind: Rule
      services:
        - name: grafana
          namespace: grafana
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
        - name: redirect-to-https
          namespace: traefik
  tls:
    secretName: kubernasty-wildcard-backing-secret
