kubernasty/crust/ingress/kubernetes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubernetes.micahrl.me`)
      kind: Rule
      services:
        - name: kubernetes-dashboard-kong-proxy
          namespace: kubernetes-dashboard
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
        - name: redirect-to-https
          namespace: traefik
  tls:
    secretName: kubernasty-wildcard-backing-secret
