kubernasty/crust/ingress/objects.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: objects
  namespace: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`objects.micahrl.me`)
      kind: Rule
      services:
        - name: rook-ceph-rgw-cephalopodobj-nvme-3rep
          namespace: rook-ceph
          kind: Service
          port: 80
      middlewares:
        - name: redirect-to-https
          namespace: traefik
  tls:
    secretName: kubernasty-wildcard-backing-secret
