kubernasty/crust/ingress/prometheus.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.micahrl.me`)
      kind: Rule
      services:
        - name: prometheus-operated
          namespace: prometheus
          kind: Service
          port: 9090
      middlewares:
        - name: authelia
          namespace: authelia
        - name: redirect-to-https
          namespace: traefik
  tls:
    secretName: kubernasty-wildcard-backing-secret
