kubernasty/crust/ingress/startpage.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: startpage
  namespace: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubernasty.micahrl.me`)
      kind: Rule
      services:
        - name: startpage
          namespace: authelia
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
        - name: redirect-to-https
          namespace: traefik
  tls:
    secretName: kubernasty-wildcard-backing-secret
