kubernasty/crust/ingress/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: ingress
spec:
  entryPoints:
    - websecure
  routes:
    # Don't forget that there is nothing at the root of this service;
    # the dashboard is at /dashboard/
    # (and the trailing slash is important!)
    # ... the redirect-dashboard middleware takes care of this for us.
    - match: Host(`traefik.micahrl.me`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: redirect-to-https
          namespace: traefik
        - name: redirect-dashboard
          namespace: traefik
  tls:
    secretName: kubernasty-wildcard-backing-secret
