kubernasty/crust/ingress/whoami-unauthenticated.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-unauthenticated
  namespace: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami-unauthenticated.micahrl.me`)
      kind: Rule
      services:
        - name: whoami-unauthenticated
          namespace: authelia
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
        - name: redirect-to-https
          namespace: traefik
  tls:
    secretName: kubernasty-wildcard-backing-secret
